--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.4",
+    "graphql": "^16.5.0",
+    "moment": "^2.29.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
