--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
+    "formik": "^2.2.9",
     "graphql": "^16.5.0",
     "moment": "^2.29.3",
     "next": "12.1.6",
