--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,17 @@
     "license": "UNLICENSED",
     "scripts": {
         "prebuild": "rimraf dist",
-        "build": "nest build",
-        "start": "nest start",
-        "dev": "nest start --watch",
-        "start:prod": "node dist/main"
+        "build": "SET NODE_ENV=production& nest build",
+        "build:linux": "NODE_ENV=production nest build",
+        "dev": "SET NODE_ENV=development& nest start --watch",
+        "dev:linux": "NODE_ENV=development nest start --watch",
+        "start": "SET NODE_ENV=production& node dist/main",
+        "start:linux": "NODE_ENV=production node dist/main"
     },
     "dependencies": {
         "@nestjs/apollo": "^10.0.11",
         "@nestjs/common": "^8.0.0",
+        "@nestjs/config": "^2.0.1",
         "@nestjs/core": "^8.0.0",
         "@nestjs/graphql": "^10.0.11",
         "@nestjs/platform-express": "^8.0.0",
