--- a/server/.development.env
+++ b/server/.development.env
@@ -1,5 +1,12 @@
-PORT=8001
-MYSQL_HOST=localhost
+# PORT=8001
+# MYSQL_HOST=localhost
+# MYSQL_PORT=3306
+# MYSQL_USERNAME=root
+# MYSQL_DB=energetics
+
+PORT=8002
+MYSQL_HOST=mo4-web
 MYSQL_PORT=3306
-MYSQL_USERNAME=root
-MYSQL_DB=energetics
+MYSQL_USERNAME=cartridgeuser
+MYSQL_PASSWORD=6a4IJOKiCa71
+MYSQL_DB=cartridge
