--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -14,20 +14,20 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": ".",
-    "paths": {
-      "assets/*": ["./src/assets/*"],
-      "components/*": ["./src/components/*"],
-      "constants/*": ["./src/constants/*"],
-      "layouts/*": ["./src/layouts/*"],
-      "pages/*": ["./src/pages/*"],
-      "types/*": ["./src/types/*"],
-      "store/*": ["./src/store/*"],
-      "styles/*": ["./src/styles/*"],
-      "http/*": ["./src/http/*"],
-      "hooks/*": ["./src/hooks/*"]
-    }
+    "baseUrl": "."
+    // "paths": {
+    //   "assets/*": ["assets/*"],
+    //   "components/*": ["components/*"],
+    //   "constants/*": ["./src/constants/*"],
+    //   "layouts/*": ["./src/layouts/*"],
+    //   "pages/*": ["pages/*"],
+    //   "types/*": ["./src/types/*"],
+    //   "store/*": ["./src/store/*"],
+    //   "styles/*": ["./src/styles/*"],
+    //   "http/*": ["./src/http/*"],
+    //   "hooks/*": ["./src/hooks/*"]
+    // }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "."],
   "exclude": ["node_modules"]
 }
