--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "@mui/x-date-pickers": "^5.0.0-beta.0",
         "file-saver": "^2.0.5",
         "formik": "^2.2.9",
+        "fuse.js": "^6.6.2",
         "graphql": "^16.5.0",
         "moment": "^2.29.3",
         "next": "12.1.6",
