--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
         "qrcode.react": "^3.0.2",
         "react": "18.1.0",
         "react-dom": "18.1.0",
+        "react-window": "^1.8.7",
         "xlsx": "^0.18.5"
     },
     "devDependencies": {
