--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "@mui/icons-material": "^5.8.0",
         "@mui/material": "^5.8.0",
         "@mui/x-date-pickers": "^5.0.0-beta.0",
+        "@reduxjs/toolkit": "^1.8.3",
         "file-saver": "^2.0.5",
         "formik": "^2.2.9",
         "fuse.js": "^6.6.2",
@@ -24,7 +25,10 @@
         "qrcode.react": "^3.0.2",
         "react": "18.1.0",
         "react-dom": "18.1.0",
+        "react-intersection-observer": "^9.3.5",
+        "react-redux": "^8.0.2",
         "react-window": "^1.8.7",
+        "redux-persist": "^6.0.0",
         "xlsx": "^0.18.5"
     },
     "devDependencies": {
